--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       FotoWidget
     </div>
     <nav>
-      <a href="https://github.com/Uznbt/Uznbt.github.io/raw/main/FotoWidget_Setup.zip" target="_blank">
+      <a href="https://github.com/FotoWidget/FotoWidget.github.io/raw/main/FotoWidget_Setup.zip" target="_blank">
   Download
       </a>
       <a href="#fitur">Fitur</a>
@@ -38,8 +38,8 @@
       <span>Developer: UZNBT</span>
       <span>Gratis 100%</span>
     </div>
-    <a id="download" class="btn-primary" href="https://github.com/Uznbt/Uznbt.github.io/raw/main/FotoWidget_Setup.zip">
-      INSTALL FOTOWIDGET
+    <a id="download" class="btn-primary" href="https://github.com/FotoWidget/FotoWidget.github.io/raw/main/FotoWidget_Setup.zip">
+      INSTALL FOTO WIDGET
     </a>
   </div>
 </section>
