--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <ul class="list">
     <li>Nama Installer: <b>FotoWidget_Setup.exe</b></li>
-    <li>Lokasi Install: Dipilih pengguna (default C:)</li>
+    <li>Lokasi Install: Dipilih pengguna (default AppData)</li>
     <li>Uninstall: Menghapus semua data</li>
     <li>Shortcut Startup: Aktif</li>
     <li>Shortcut Desktop: Aktif</li>
