--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       Foto Widget
     </div>
     <nav>
-      <a href="https://github.com/FotoWidget/FotoWidget.github.io/raw/main/FotoWidget_Setup.exe" target="_blank">
+      <a href="https://github.com/FotoWidget/FotoWidget.github.io/raw/main/FotoWidget_Setup.zip" target="_blank">
   Download
       </a>
       <a href="#fitur">Fitur</a>
@@ -38,7 +38,7 @@
       <span>Developer: UZNBT</span>
       <span>Gratis 100%</span>
     </div>
-    <a id="download" class="btn-primary" href="https://github.com/FotoWidget/FotoWidget.github.io/raw/main/FotoWidget_Setup.exe">
+    <a id="download" class="btn-primary" href="https://github.com/FotoWidget/FotoWidget.github.io/raw/main/FotoWidget_Setup.zip">
       INSTALL FOTO WIDGET
     </a>
   </div>
@@ -141,3 +141,4 @@
 
 </body>
 </html>
+
