--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       Foto Widget
     </div>
     <nav>
-      <a href="https://github.com/FotoWidget/FotoWidget.github.io/raw/main/FotoWidget_Setup.zip" target="_blank">
+      <a href="https://github.com/FotoWidget/FotoWidget.github.io/raw/main/FotoWidget_Setup_v3.0.zip" target="_blank">
   Download
       </a>
       <a href="#fitur">Fitur</a>
@@ -141,4 +141,5 @@
 
 </body>
 </html>
+
 
