--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <span>Developer: UZNBT</span>
       <span>Gratis 100%</span>
     </div>
-    <a id="download" class="btn-primary" href="https://github.com/FotoWidget/FotoWidget.github.io/raw/main/FotoWidget_Setup.zip">
+    <a id="download" class="btn-primary" href="https://github.com/FotoWidget/FotoWidget.github.io/raw/main/FotoWidget_Setup_v3.0.zip">
       INSTALL FOTO WIDGET
     </a>
   </div>
@@ -141,5 +141,6 @@
 
 </body>
 </html>
+
 
 
