--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
       Foto Widget
     </div>
     <nav>
-      <a href="https://github.com/FotoWidget/FotoWidget.github.io/raw/main/FotoWidget_Setup_v3.0.zip" target="_blank">
-  Download
-      </a>
+      <a href="#" id="downloadNav">Download</a>
       <a href="#fitur">Fitur</a>
       <a href="#installer">Installer</a>
       <a href="#about">Tentang</a>
@@ -38,7 +36,7 @@
       <span>Developer: UZNBT</span>
       <span>Gratis 100%</span>
     </div>
-    <a id="download" class="btn-primary" href="https://github.com/FotoWidget/FotoWidget.github.io/raw/main/FotoWidget_Setup_v3.0.zip">
+    <a id="downloadHero" class="btn-primary" href="#">
       INSTALL FOTO WIDGET
     </a>
   </div>
@@ -141,6 +139,7 @@
 
 </body>
 </html>
+
 
 
 
